[project]
name = "context-monitor-mcp"
version = "0.1.0"
description = "Claude Code session context monitor — real-time token dashboard via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Leo-Ayh-Oday", email = "2115464137@qq.com"},
]
keywords = ["claude-code", "mcp", "token", "context-window", "monitor", "tiktoken"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/Leo-Ayh-Oday/context-monitor"
Repository = "https://github.com/Leo-Ayh-Oday/context-monitor"
Issues = "https://github.com/Leo-Ayh-Oday/context-monitor/issues"

[project.scripts]
context-monitor = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
